--- a/Frontend/src/app/landing-page/landing-page.component.html
+++ b/Frontend/src/app/landing-page/landing-page.component.html
@@ -1,1 +1,162 @@
-<p>landing-page works!</p>
+<div class="landing-container">
+  <div class="landing-card">
+    <div class="landing-card-details">
+      <hr />
+      <div class="questions">
+        <div class="question">
+          <h3 class="landing-title">Question 1</h3>
+          <p class="landing-title-para">
+            Learn at your own pace from top teachers and subject experts.
+          </p>
+          <div class="answer">
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="answer1"
+              (click)="selectedAnswers($event)"
+            >
+              Answer 1
+            </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="answer2"
+              (click)="selectedAnswers($event)"
+            >
+              Answer 2
+            </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="answer3"
+              (click)="selectedAnswers($event)"
+            >
+              Answer 3
+            </button>
+          </div>
+        </div>
+        <div class="question">
+          <h3 class="landing-title">Question 1</h3>
+          <p class="landing-title-para">
+            Learn at your own pace from top teachers and subject experts.
+          </p>
+          <div class="answer">
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="answer1"
+              (click)="selectedAnswers($event)"
+            >
+              Answer 1
+            </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="answer2"
+              (click)="selectedAnswers($event)"
+            >
+              Answer 2
+            </button>
+          </div>
+        </div>
+        <div class="question">
+          <h3 class="landing-title">Question 1</h3>
+          <p class="landing-title-para">
+            Learn at your own pace from top teachers and subject experts.
+          </p>
+          <div class="answer">
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="answer1"
+              (click)="selectedAnswers($event)"
+            >
+              Answer 1
+            </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="answer2"
+              (click)="selectedAnswers($event)"
+            >
+              Answer 2
+            </button>
+          </div>
+        </div>
+        <div class="question">
+          <h3 class="landing-title">Question 1</h3>
+          <p class="landing-title-para">
+            Learn at your own pace from top teachers and subject experts.
+          </p>
+          <div class="answer">
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="answer1"
+              (click)="selectedAnswers($event)"
+            >
+              Answer 1
+            </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="answer2"
+              (click)="selectedAnswers($event)"
+            >
+              Answer 2
+            </button>
+          </div>
+        </div>
+        <div class="question">
+          <h3 class="landing-title">Question 1</h3>
+          <p class="landing-title-para">
+            Learn at your own pace from top teachers and subject experts.
+          </p>
+          <div class="answer">
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="answer1"
+              (click)="selectedAnswers($event)"
+            >
+              Answer 1
+            </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="answer2"
+              (click)="selectedAnswers($event)"
+            >
+              Answer 2
+            </button>
+          </div>
+        </div>
+        <div class="question">
+          <h3 class="landing-title">Question 1</h3>
+          <p class="landing-title-para">
+            Learn at your own pace from top teachers and subject experts.
+          </p>
+          <div class="answer">
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="answer1"
+              (click)="selectedAnswers($event)"
+            >
+              Answer 1
+            </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="answer2"
+              (click)="selectedAnswers($event)"
+            >
+              Answer 2
+            </button>
+          </div>
+        </div>
+      </div>
+      <button class="landing-button">Submit</button>
+    </div>
+  </div>
+</div>
