--- a/Frontend/src/app/homepage/homepage.component.html
+++ b/Frontend/src/app/homepage/homepage.component.html
@@ -1,4 +1,21 @@
 <section class="homepage-cards">
+  <div class="typesofsubjects">
+
+    <div class="cards">
+      <div class="card" *ngFor="let details of subjectDetails">
+        <div class="card-content">
+          <h2>{{ details.subject }}</h2>
+          <p>{{ details.info }}</p>
+        </div>
+        <button mat-raised-button color="primary" class="button-space" *ngFor="let sub of details.subsections">{{sub}}</button>
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<hr>
+<section class="homepage-cards">
     <div class="typesofcontent">
       <div class="button-types">
         <button mat-raised-button color="primary" (click)="setCourses()">Courses</button>
