changes in landing page

--- a/Frontend/src/app/landing-page/landing-page.component.html
+++ b/Frontend/src/app/landing-page/landing-page.component.html
@@ -4,157 +4,403 @@
       <hr />
       <div class="questions">
         <div class="question">
-          <h3 class="landing-title">Question 1</h3>
+          <h3 class="landing-title">
+            What is your favorite subject in school?
+          </h3>
           <p class="landing-title-para">
-            Learn at your own pace from top teachers and subject experts.
+            Learning effortless and manage to get good marks.
           </p>
           <div class="answer">
             <button
               [ngClass]="[buttonStyle]"
               class="answer-button"
-              value="answer1"
+              value="mathematics"
               (click)="selectedAnswers($event)"
             >
-              Answer 1
+              Mathematics
             </button>
             <button
               [ngClass]="[buttonStyle]"
               class="answer-button"
-              value="answer2"
+              value="science"
               (click)="selectedAnswers($event)"
             >
-              Answer 2
+              Science
             </button>
             <button
               [ngClass]="[buttonStyle]"
               class="answer-button"
-              value="answer3"
+              value="english"
               (click)="selectedAnswers($event)"
             >
-              Answer 3
+              English
+            </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="social studies"
+              (click)="selectedAnswers($event)"
+            >
+              Social Studies
             </button>
           </div>
         </div>
         <div class="question">
-          <h3 class="landing-title">Question 1</h3>
+          <h3 class="landing-title">What is your favorite way to learn?</h3>
           <p class="landing-title-para">
-            Learn at your own pace from top teachers and subject experts.
+            Continuous curiosity and exploration coupled with a growth mindset.
           </p>
           <div class="answer">
             <button
               [ngClass]="[buttonStyle]"
               class="answer-button"
-              value="answer1"
+              value="Reading textbooks"
               (click)="selectedAnswers($event)"
             >
-              Answer 1
+              Reading textbooks
             </button>
             <button
               [ngClass]="[buttonStyle]"
               class="answer-button"
-              value="answer2"
+              value="Listening to lectures"
               (click)="selectedAnswers($event)"
             >
-              Answer 2
+              Listening to lectures
+            </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Participating in discussions"
+              (click)="selectedAnswers($event)"
+            >
+              Participating in discussions
+            </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Hands-on activities"
+              (click)="selectedAnswers($event)"
+            >
+              Hands-on activities
             </button>
           </div>
         </div>
         <div class="question">
-          <h3 class="landing-title">Question 1</h3>
+          <h3 class="landing-title">
+            Which of the following do you prefer when studying?
+          </h3>
           <p class="landing-title-para">
-            Learn at your own pace from top teachers and subject experts.
+            Active learning through practice, repetition, and application
           </p>
           <div class="answer">
             <button
               [ngClass]="[buttonStyle]"
               class="answer-button"
-              value="answer1"
+              value="Studying alone"
               (click)="selectedAnswers($event)"
             >
-              Answer 1
+              Studying alone
             </button>
             <button
               [ngClass]="[buttonStyle]"
               class="answer-button"
-              value="answer2"
+              value="Studying with a group"
               (click)="selectedAnswers($event)"
             >
-              Answer 2
+              Studying with a group
+            </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Online study groups"
+              (click)="selectedAnswers($event)"
+            >
+              Online study groups
+            </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="One-on-one tutoring"
+              (click)="selectedAnswers($event)"
+            >
+              One-on-one tutoring
             </button>
           </div>
         </div>
         <div class="question">
-          <h3 class="landing-title">Question 1</h3>
+          <h3 class="landing-title">
+            What are your hobbies or interests outside of school?
+          </h3>
           <p class="landing-title-para">
-            Learn at your own pace from top teachers and subject experts.
+            Exploring creativity through various forms of art and seeking new experiences through travel and outdoor activities.
           </p>
           <div class="answer">
             <button
               [ngClass]="[buttonStyle]"
               class="answer-button"
-              value="answer1"
+              value="Playing sports"
               (click)="selectedAnswers($event)"
             >
-              Answer 1
-            </button>
+            Playing sports            </button>
             <button
               [ngClass]="[buttonStyle]"
               class="answer-button"
-              value="answer2"
+              value="Reading books"
               (click)="selectedAnswers($event)"
             >
-              Answer 2
-            </button>
+            Reading books            </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Playing video games"
+              (click)="selectedAnswers($event)"
+            >
+            Playing video games            </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Playing musical instruments"
+              (click)="selectedAnswers($event)"
+            >
+            Playing musical instruments            </button>
           </div>
         </div>
         <div class="question">
-          <h3 class="landing-title">Question 1</h3>
+          <h3 class="landing-title">
+            Which career path interests you the most?
+          </h3>
           <p class="landing-title-para">
-            Learn at your own pace from top teachers and subject experts.
+            Passionate about learning new things, exploring different cultures, and engaging in meaningful conversations.
           </p>
           <div class="answer">
             <button
               [ngClass]="[buttonStyle]"
               class="answer-button"
-              value="answer1"
+              value="Medicine"
               (click)="selectedAnswers($event)"
             >
-              Answer 1
-            </button>
+            Medicine         </button>
             <button
               [ngClass]="[buttonStyle]"
               class="answer-button"
-              value="answer2"
+              value="Law"
               (click)="selectedAnswers($event)"
             >
-              Answer 2
-            </button>
+            Law           </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Engineering"
+              (click)="selectedAnswers($event)"
+            >
+            Engineering           </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Arts and Humanities"
+              (click)="selectedAnswers($event)"
+            >
+            Arts and Humanities
+          </button>
           </div>
         </div>
         <div class="question">
-          <h3 class="landing-title">Question 1</h3>
+          <h3 class="landing-title">
+            What is your favorite book or author?
+          </h3>
           <p class="landing-title-para">
-            Learn at your own pace from top teachers and subject experts.
+            Books that challenge the perspective, inspire personal growth, and offer a glimpse into diverse human experiences.
           </p>
           <div class="answer">
             <button
               [ngClass]="[buttonStyle]"
               class="answer-button"
-              value="answer1"
+              value="Harry Potter series by J.K. Rowling"
               (click)="selectedAnswers($event)"
             >
-              Answer 1
-            </button>
+            Harry Potter series by J.K. Rowling         </button>
             <button
               [ngClass]="[buttonStyle]"
               class="answer-button"
-              value="answer2"
+              value="To Kill a Mockingbird by Harper Lee"
               (click)="selectedAnswers($event)"
             >
-              Answer 2
-            </button>
+            To Kill a Mockingbird by Harper Lee           </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="The Lord of the Rings by J.R.R. Tolkien"
+              (click)="selectedAnswers($event)"
+            >
+            The Lord of the Rings          </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Pride and Prejudice by Jane Austen"
+              (click)="selectedAnswers($event)"
+            >
+            Pride and Prejudice by Jane Austen
+          </button>
           </div>
         </div>
+        <div class="question">
+          <h3 class="landing-title">
+            Which type of movies or TV shows do you prefer?
+          </h3>
+          <p class="landing-title-para">
+            Enjoying a range of genres that entertain, inform, and provoke thought, from dramas and documentaries to comedies and thrillers.
+          </p>
+          <div class="answer">
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Action and Adventure"
+              (click)="selectedAnswers($event)"
+            >
+            Action and Adventure      </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Romance"
+              (click)="selectedAnswers($event)"
+            >
+            Romance           </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Comedy"
+              (click)="selectedAnswers($event)"
+            >
+            Comedy         </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Documentary"
+              (click)="selectedAnswers($event)"
+            >
+            Documentary
+          </button>
+          </div>
+        </div>
+        <div class="question">
+          <h3 class="landing-title">
+            What is your favorite type of music?
+          </h3>
+          <p class="landing-title-para">
+            "Appreciating the power of music to uplift, inspire, and connect people across cultures and generations, with a particular affinity
+          </p>
+          <div class="answer">
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Pop"
+              (click)="selectedAnswers($event)"
+            >
+            Pop    </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Rock"
+              (click)="selectedAnswers($event)"
+            >
+            Rock           </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Hip Hop"
+              (click)="selectedAnswers($event)"
+            >
+            Hip Hop         </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Classical"
+              (click)="selectedAnswers($event)"
+            >
+            Classical
+          </button>
+          </div>
+        </div>
+        <div class="question">
+          <h3 class="landing-title">
+            Which social media platform do you use the most?
+          </h3>
+          <p class="landing-title-para">
+            Using social media mindfully and intentionally to connect with others, share ideas and experiences, and stay informed about the world around me.
+          </p>
+          <div class="answer">
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Facebook"
+              (click)="selectedAnswers($event)"
+            >
+            Facebook    </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Instagram"
+              (click)="selectedAnswers($event)"
+            >
+            Instagram           </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="TikTok"
+              (click)="selectedAnswers($event)"
+            >
+            TikTok        </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Twitter"
+              (click)="selectedAnswers($event)"
+            >
+            Twitter
+          </button>
+          </div>
+        </div>
+
+        <div class="question">
+          <h3 class="landing-title">
+            What is your favorite type of food?
+          </h3>
+          <p class="landing-title-para">
+            Savoring a diverse range of flavors and cuisines, with a particular love.
+          </p>
+          <div class="answer">
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Italian"
+              (click)="selectedAnswers($event)"
+            >
+            Italian    </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Mexican"
+              (click)="selectedAnswers($event)"
+            >
+            Mexican           </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="Chinese"
+              (click)="selectedAnswers($event)"
+            >
+            Chinese        </button>
+            <button
+              [ngClass]="[buttonStyle]"
+              class="answer-button"
+              value="American"
+              (click)="selectedAnswers($event)"
+            >
+            American
+          </button>
+          </div>
+        </div>
+
       </div>
       <button class="landing-button">Submit</button>
     </div>
