--- a/Frontend/src/app/landing-page/landing-page.component.css
+++ b/Frontend/src/app/landing-page/landing-page.component.css
@@ -75,7 +75,7 @@ hr {
 
 .answer{
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto auto auto;
     gap: 10px;
     place-items: center;
 }
