--- a/Frontend/src/app/Student/components/video/video.component.css
+++ b/Frontend/src/app/Student/components/video/video.component.css
@@ -2,9 +2,9 @@
     background-color:#E5E5E5
 }
 .course-start-div{
-    width: 75%;
+    width: 90%;
     height: 600px;
-    margin-left: 185px;
+    margin-left: 50px;
     margin-top: 20px;
     background: #EFEBF5;
     border-radius: 20px;
@@ -67,7 +67,7 @@
 }
 
 .course-data{
-    margin: 50px 185px;
+    margin: 50px 50px;
     display: flex;
 }
 
@@ -153,9 +153,11 @@
   .rec-title{
     font-size:16px;
     margin-bottom:5px;
+    text-align: left;
   }
   .rec-course-data{
     margin-left: 10px;
+    width: 75%;
   }
   .rec-expert,.rec-category{
     font-size:15px;
@@ -165,7 +167,7 @@
   }
 
 .icon-turnin{
-    margin-left:110px;
+    margin-left:0;
     margin-top:50px;
     background-color:#F8F2FF;
     color:#9C4DF4;
