--- a/Frontend/src/app/Student/components/quiz/quiz.component.css
+++ b/Frontend/src/app/Student/components/quiz/quiz.component.css
@@ -8,7 +8,7 @@
   .quiz-card {
     border: 2px solid #bdbdbd;
     padding: 16px;
-    border-radius: 40px;
+    /* border-radius: 40px; */
     box-shadow: 2px 2px #333;
     background-color: #ffffff;
   }
